feat: 급여 데이터 regularly_assignment 추가, 고정업무 일반업무 구분하여 저장, 상세 급여 화면에 업무내역 추가

--- a/humanresource/templates/HR/salary_change.html
+++ b/humanresource/templates/HR/salary_change.html
@@ -102,7 +102,7 @@
                         {{salary.order}} <!-- 일반수당 -->
                     </td>
                     <td class="checkTd table-list_body-tr_td addComma textAlignRight salaryAssignment">
-                        {{salary.assignment}}
+                        {{salary.assignment|add:salary.regularly_assignment}}
                     </td>
                     <td class="table-list_body-tr_td addComma textAlignRight salaryAdditional backgroundYellow additionalTd">
                         {{salary.additional}} <!-- 추가수당 -->
