fix: 급여 상세 업무부분 총합 제대로 안 나오는 부분 수정

--- a/humanresource/templates/HR/salary_detail.html
+++ b/humanresource/templates/HR/salary_detail.html
@@ -222,8 +222,8 @@
                         {% endif %}
                     </td>
                     <td class="printComma">
-                        {% if data.regularly_assignment_list|index:forloop.counter0 or data.attendance_list|index:forloop.counter0 or data.assignment_list|index:forloop.counter0 %}
-                            {{data.total_list|index:forloop.counter0}}
+                        {% if data.regularly_assignment_list|index:forloop.counter0 or data.assignment_list|index:forloop.counter0 or data.assignment_list|index:forloop.counter0 %}
+                            {{data.assignment_total_list|index:forloop.counter0}}
                         {% endif %}
                     </td>
                 </tr>
@@ -232,7 +232,7 @@
                     <td>소계</td>
                     <td colspan="2">{{data.assignment_cnt}}</td>
                     <td colspan="2">{{data.regularly_assignment_cnt}}</td>
-                    <td>{{data.total_cnt}}</td>
+                    <td>{{data.assignment_total_cnt}}</td>
                 </tr>
             </tbody>
         </table>
