feat: 급여상세 고정업무 내역에 ,추가

--- a/humanresource/templates/HR/salary_detail.html
+++ b/humanresource/templates/HR/salary_detail.html
@@ -213,7 +213,7 @@
                     </td> -->
                     <td title="{{data.regularly_assignment_list|index:forloop.counter0}}">
                         {% for d in data.regularly_assignment_list|index:forloop.counter0 %}
-                            {{d|slice:':8'}}
+                            {{d|slice:':8'}},
                         {% endfor %}
                     </td>
                     <td class="printComma">
