--- a/vehicle/templates/vehicle/accident.html
+++ b/vehicle/templates/vehicle/accident.html
@@ -153,6 +153,7 @@
 
 <!-- Script Block -->
 {% block script %}
+<script src="{% static 'js/hr/member_efficiency.js' %}"></script>
 <script src="{% static 'js/vehicle/accident.js' %}"></script>
 
 {% endblock %}
