--- a/static/css/humanresource/member_efficiency.css
+++ b/static/css/humanresource/member_efficiency.css
@@ -363,6 +363,15 @@
     justify-content: space-between;
 }
 
+.search-form {
+    width: 100%;
+    height: 16rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 /* 노선명 검색: dispatch-path  */
 .search-dispatch-path-box {
     width: 100%;
