feat: 인당효율 검색 기능 빼고 완료
검색 기능 구현 안함
날짜 검색만 완료
공차, 등급 구현 안함

--- a/templates/base.html
+++ b/templates/base.html
@@ -190,6 +190,9 @@
                 <a href="{% url 'accounting:regularly_collect' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">출/퇴근 수금관리</li>
                 </a>
+                <a href="{% url 'accounting:member_efficiency' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">인당효율</li>
+                </a>
               </ul>
             </div>
           </div>
