update : 인당효율 화면 스타일 수정, js 조금 수정
버튼 스타일 base에 있는 btnModules 적용, border-radius 낮춤, 글자크기 작게, 어제 내일 버튼 수정

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,13 +27,13 @@ textarea {
 }
 
 /* 스크롤바 설정*/
-html::-webkit-scrollbar {
+.scrollDiv::-webkit-scrollbar {
   position: absolute;
   width: 1rem;
 }
 
 /* 스크롤바 막대 설정*/
-html::-webkit-scrollbar-thumb {
+.scrollDiv::-webkit-scrollbar-thumb {
   height: 17%;
   background-color: #828282;
   /* 스크롤바 둥글게 설정    */
@@ -41,7 +41,7 @@ html::-webkit-scrollbar-thumb {
 }
 
 /* 스크롤바 뒷 배경 설정*/
-html::-webkit-scrollbar-track {
+.scrollDiv::-webkit-scrollbar-track {
   background-color: #F5F5F5;
 }
 
