--- a/accounting/templates/accounting/member_efficiency.html
+++ b/accounting/templates/accounting/member_efficiency.html
@@ -20,22 +20,34 @@
         <form action="" class="search-form efficiency-div">
             <div class="search-dispatch-path-box efficiency-div">
                 <input type="text" name="pathName" placeholder="노선명" class="search-dispatch-path">
-                <input type="date" name="date1" value="{{date1}}" class="search-dispatch-path-date">
-                <input type="date" name="date2" value="{{date2}}" class="search-dispatch-path-date">
-                <input type="submit" value="오늘" class="dispatch-path-today-button">
-                <input type="submit" value="" class="day-before-button">
-                <input type="submit" value="" class="day-after-button">
-                <input type="submit" value="검색" class="dispatch-path-search-button">
+                <input type="date" name="date1" value="{{date1}}" class="search-dispatch-path-date search-dispatch-path-date1">
+                <input type="date" name="date2" value="{{date2}}" class="search-dispatch-path-date search-dispatch-path-date2">
+                <input type="submit" value="오늘" class="dispatch-path-today-button btnModules">
+                <div class="dateControllBtn day-before-button">
+                    <svg id="그룹_1846" data-name="그룹 1846" xmlns="http://www.w3.org/2000/svg" width="10" height="14" viewBox="0 0 10 14">
+                        <rect id="사각형_12020" data-name="사각형 12020" width="10" height="14" transform="translate(0)" fill="none"></rect>
+                        <path id="Icon_ionic-ios-arrow-back" data-name="Icon ionic-ios-arrow-back" d="M13.665,13.19,18.96,7.9a1,1,0,1,0-1.416-1.412l-6,6a1,1,0,0,0-.029,1.379L17.54,19.9a1,1,0,1,0,1.416-1.412Z" transform="translate(-11.252 -6.192)" fill="#fff"></path>
+                    </svg>
+                </div>
+                <div class="dateControllBtn day-after-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="14" viewBox="0 0 10 14">
+                        <g id="그룹_1846" data-name="그룹 1846" transform="translate(-613 -66)">
+                          <rect id="사각형_12020" data-name="사각형 12020" width="10" height="14" transform="translate(613 66)" fill="none"></rect>
+                          <path id="Icon_ionic-ios-arrow-back" data-name="Icon ionic-ios-arrow-back" d="M16.839,13.19,11.544,7.9A1,1,0,1,1,12.96,6.486l6,6a1,1,0,0,1,.029,1.379L12.964,19.9a1,1,0,1,1-1.416-1.412Z" transform="translate(603.748 59.808)" fill="#fff"></path>
+                        </g>
+                    </svg>                              
+                </div>
+                <input type="submit" value="검색" class="dispatch-path-search-button btnModules">
             </div>
             
             <div class="search-detail-box efficiency-div">
                 <table class="search-detail-table">
                     <tr> <!-- 이름 및 출퇴근 -->
-                        <td class="name-td">이름</td>
+                        <td class="search-detail-table-td name-td">이름</td>
                         <td class="name-input-td-background">
                             <input type="text" class="name-input-td" name="name">
                         </td>
-                        <td class="work-time-td">출/퇴근</td>
+                        <td class="search-detail-table-td work-time-td">출/퇴근</td>
                         <td class="work-time-input-td">
                             <div class="work-time">
                                 <input type="radio" name="dispatchKind" id="attendance" value="출근">
@@ -52,11 +64,11 @@
                         </td>
                     </tr>
                     <tr> <!-- 급여 및 급여 형태 -->
-                        <td class="salary-td">급여</td>
+                        <td class="search-detail-table-td salary-td">급여</td>
                         <td class="salary-input-td-background">
                             <input type="text" name="salary" class="salary-input-td">
                         </td>
-                        <td class="salary-form-td">급여형태</td>
+                        <td class="search-detail-table-td salary-form-td">급여형태</td>
                         <td class="salary-form-input-td-background">
                             <input type="text" name="contractType" class="salary-form-input-td">
                         </td>
@@ -67,37 +79,37 @@
 
         <div class="search-filter-box efficiency-div">
             <div class="search-filter-buttons-box">
-                <input type="button" value="일별" class="search-filter-button">
-                <input type="button" value="주별" class="search-filter-button">
-                <input type="button" value="월별" class="search-filter-button">
-                <input type="button" value="매출 높은 순" class="search-filter-button sales-filter">
+                <input type="button" value="일별" class="search-filter-button btnModules">
+                <input type="button" value="주별" class="search-filter-button btnModules">
+                <input type="button" value="월별" class="search-filter-button btnModules">
+                <input type="button" value="매출 높은 순" class="search-filter-button sales-filter btnModules">
             </div>
             <div class="search-filter-print-box">
-                <input type="button" value="인쇄" class="search-filter-button">
+                <input type="button" value="인쇄" class="btnModules backgroundBlue">
             </div>
         </div>
 
-        <div class="search-table-box efficiency-div">
+        <div class="search-table-box efficiency-div scrollDiv">
             <table class="table-list">
                 <thead class="scrolling_table-list_header">
                     <tr class="table-list_head-tr">
-                        <td class="table-list_head-tr_td">
-                                <input type="checkbox" class="amountCheckAll">
-                        </td>
-                        <td class="table-list_head-tr_td">번호</td>
-                        <td class="table-list_head-tr_td">등급</td>
-                        <td class="table-list_head-tr_td">이름</td>
-                        <td class="table-list_head-tr_td">팀</td>
-                        <td class="table-list_head-tr_td">급여</td>
-                        <td class="table-list_head-tr_td">노선운행량</td>
-                        <td class="table-list_head-tr_td">매출액</td>
-                        <td class="table-list_head-tr_td">운행수</td>
-                        <td class="table-list_head-tr_td">KM</td>
-                        <td class="table-list_head-tr_td">시간</td>
-                        <td class="table-list_head-tr_td">유류비</td>
-                        <td class="table-list_head-tr_td">공차</td>
-                        <td class="table-list_head-tr_td">최초 고용일</td>
-                        <td class="table-list_head-tr_td">근무형태</td>
+                        <th class="table-list_head-tr_th">
+                            <input type="checkbox" class="amountCheckAll">
+                        </th>
+                        <th class="table-list_head-tr_th">번호</th>
+                        <th class="table-list_head-tr_th">등급</th>
+                        <th class="table-list_head-tr_th">이름</th>
+                        <th class="table-list_head-tr_th">팀</th>
+                        <th class="table-list_head-tr_th">급여</th>
+                        <th class="table-list_head-tr_th">노선운행량</th>
+                        <th class="table-list_head-tr_th">매출액</th>
+                        <th class="table-list_head-tr_th">운행수</th>
+                        <th class="table-list_head-tr_th">KM</th>
+                        <th class="table-list_head-tr_th">시간</th>
+                        <th class="table-list_head-tr_th">유류비</th>
+                        <th class="table-list_head-tr_th">공차</th>
+                        <th class="table-list_head-tr_th">최초 고용일</th>
+                        <th class="table-list_head-tr_th">근무형태</th>
                     </tr>
                 </thead>
 
