--- a/static/css/accounting/member_efficiency.css
+++ b/static/css/accounting/member_efficiency.css
@@ -355,7 +355,7 @@
 /* 검색 관련 CSS: search- */
 .search-container {
     width: 100%;
-    height: 75rem;
+    height: 81rem;
 
     display: flex;
     flex-direction: column;
@@ -375,9 +375,9 @@
 /* 노선명 검색: dispatch-path  */
 .search-dispatch-path-box {
     width: 100%;
-    height: 5rem;
+    height: 5.2rem;
     background-color: white;
-    border-radius: 17px;
+    border-radius: 0.5rem;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
     display: flex;
@@ -401,18 +401,7 @@
 }
 
 .dispatch-path-today-button {
-    border: none;
-    border-radius: 8px;
-
-    width: 5rem;
-    height: 3rem;
-    background-color: #1C1A4E;
-
-    text-align: center;
-    font-size: 1.2rem;
-    font-weight: 500;
-    color: white;
-    
+    background-color: #444444;
     margin-left: 1rem;
 }
 
@@ -421,36 +410,32 @@
 }
 
 .day-before-button {
-    border: none;
-    background: url("/static/images/dayBeforeButton.png") no-repeat;
-    width: 35px;
-    height: 35px;
-
     margin-left: 1.5rem;
 }
 
 .day-after-button {
-    border: none;
-    background: url("/static/images/dayAfterButton.png") no-repeat;
-    width: 35px;
-    height: 35px;
-
     margin-left: 1rem;
 }
 
-.dispatch-path-search-button {
-    border: none;
-    border-radius: 8px;
-
-    width: 5rem;
-    height: 3rem;
-    background-color: #1C1A4E;
-
-    text-align: center;
-    font-size: 1.2rem;
-    font-weight: 500;
+.dateControllBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.4rem;
+    height: 2.4rem;
+    border-radius: 100%;
+    background-color: #444;
+    font-size: 1.6rem;
     color: white;
-    
+    cursor: pointer;
+}
+
+.dateControllBtn svg {
+    width: 40%;
+}
+
+.dispatch-path-search-button {
+    background-color: #444444;
     margin-left: 1.5rem;
 }
 
@@ -463,7 +448,7 @@
     width: 100%;
     height: 10rem;
     background-color: white;
-    border-radius: 17px;
+    border-radius: 0.5rem;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
@@ -473,15 +458,7 @@
 }
 
 .name-td {
-    width: 15rem;
-    height: 50%;
-    background-color: #444444;
-    border-top-left-radius: 17px;
-
-    color: white;
-    font-size: 16px;
-    font-weight: 500;
-    text-align: center;
+    border-top-left-radius: 0.5rem;
 }
 
 .name-input-td-background {
@@ -494,16 +471,16 @@
     height: 60%;
     border-color: #444444;
     border-width: 1px;
-    border-radius: 6px;
+    border-radius: 0.5rem;
 }
 
-.work-time-td {
+.search-detail-table-td {
     width: 15rem;
     height: 50%;
     background-color: #444444;
 
     color: white;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 500;
     text-align: center;
 }
@@ -523,21 +500,13 @@
 }
 
 .work-time-label {
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 500;
     color: #a4a4a4;
 }
 
 .salary-td {
-    width: 15rem;
-    height: 50%;
-    background-color: #444444;
-    border-bottom-left-radius: 17px;
-
-    color: white;
-    font-size: 16px;
-    font-weight: 500;
-    text-align: center;
+    border-bottom-left-radius: 0.5rem;
 }
 
 .salary-input-td-background {
@@ -550,18 +519,7 @@
     height: 60%;
     border-color: #444444;
     border-width: 1px;
-    border-radius: 6px;
-}
-
-.salary-form-td {
-    width: 15rem;
-    height: 50%;
-    background-color: #444444;
-
-    color: white;
-    font-size: 16px;
-    font-weight: 500;
-    text-align: center;
+    border-radius: 0.5rem;
 }
 
 .salary-form-input-td-background {
@@ -574,7 +532,7 @@
     height: 60%;
     border-color: #444444;
     border-width: 1px;
-    border-radius: 6px;
+    border-radius: 0.5rem;
 }
 
 /* 필터: filter  */
@@ -588,18 +546,17 @@
     align-items: center;
 }
 
+.search-filter-buttons-box {
+    display: flex;
+    align-items: center;
+}
+
 .search-filter-button {
-    border: none;
-    border-radius: 8px;
-
-    width: 5rem;
-    height: 3rem;
     background-color: #444444;
+    border-radius: 0.5rem;
 
-    text-align: center;
-    font-size: 1.2rem;
-    font-weight: 500;
-    color: white;
+    margin-right: 1rem;
+
 }
 
 .search-filter-button:active {
@@ -607,23 +564,26 @@
 }
 
 .sales-filter {
-    width: 10rem;
-    height: 3rem;
-
     margin-left: 3rem;
 }
 
 /* 표: table */
 .search-table-box {
     width: 100%;
-    height: 52.5rem;
+    height: calc(81rem - 20rem);
     background-color: white;
-    border-radius: 17px;
+    border-radius: 0.5rem;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    overflow-y: auto;
 }
 
-.table-list_head-tr {
-    border-radius: 17px;
+.table-list_head-tr_th{
+    position: sticky;
+    top: 0;
+    background-color: #444444;
+    color: white;
+    font-size: 1.4rem;
+    font-weight: normal;
 }
 
 /* 번호, 등급, 이름, 팀, 급여, 목표운행량, 매출액, KM, 시간, 유류비, 공차, 최초 고용일, 근무형태 */
